# croc-gui

./: .gitignore  README.md  index.html  package-lock.json  package-lock.json.bak  package.json  vite.config.ts
node_modules.bak/: .package-lock.json
node_modules.bak/@tauri-apps/cli-linux-x64-gnu/: package.json
node_modules.bak/@tauri-apps/cli-linux-x64-musl/: package.json
src/: App.vue  config.ts
src-tauri/: Cargo.toml  croc-marked-files.txt  croc-stdin-1691595577  croc-stdin-2372609364  croc-stdin-3534963773  croc-stdin-3823669094  croc-stdin-4232872041  croc-stdin-789809193  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat_listener.rs  lib.rs  main.rs  setting.rs  str_oper.rs  types.rs  utils.rs  version.rs
src/utils/: dialog.ts  setting.ts
